--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "lint": "^0.8.19",
     "mongodb": "^6.9.0",
     "nodemon": "^3.1.7",
     "swagger-autogen": "^2.23.7",
