--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "env": "^0.0.2",
     "express": "^4.21.1",
     "express-openid-connect": "^2.17.1",
     "lint": "^0.8.19",
     "mongodb": "^6.9.0",
     "nodemon": "^3.1.7",
+    "prettier": "^3.3.3",
     "swagger-autogen": "^2.23.7",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "validatorjs": "^3.22.1"
   }
